# IntelOpRegionFingerprint

./: .gitignore  CMakeLists.txt  CMakePresets.json  FindWdk.cmake  README.md
scripts/: sign.ps1
src/: Driver.cpp
